--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -29,7 +29,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "expo-media-library": "~17.0.6",
-    "expo-camera": "~16.0.18"
+    "expo-camera": "~16.0.18",
+    "expo-blur": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
