--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/raleway": "^0.3.0",
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.5",
@@ -17,6 +18,10 @@
     "@react-navigation/native-stack": "^7.3.8",
     "@react-navigation/stack": "^7.2.5",
     "expo": "~52.0.42",
+    "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
+    "expo-font": "~13.0.4",
+    "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.8",
@@ -27,10 +32,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "expo-media-library": "~17.0.6",
-    "expo-camera": "~16.0.18",
-    "expo-blur": "~14.0.3"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
