--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/raleway": "^0.3.0",
+    "@expo-google-fonts/urbanist": "^0.3.0",
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.5",
