--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.1",
     "@react-navigation/native-stack": "^7.3.8",
     "@react-navigation/stack": "^7.2.5",
+    "@supabase/supabase-js": "^2.49.4",
     "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
@@ -33,7 +34,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
