--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -23,6 +23,7 @@
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -34,8 +35,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
-    "expo-image-picker": "~16.0.6"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
