--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/raleway": "^0.3.0",
     "@expo-google-fonts/urbanist": "^0.3.0",
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.5",
     "@react-navigation/drawer": "^7.3.4",
