--- a/BookEchoApp/app.json
+++ b/BookEchoApp/app.json
@@ -25,7 +25,16 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      "expo-router",
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
+          "microphonePermission":"Allow $(PRODUCT_NAME) to access your microphone",
+          "recordAudioAndroid":true
+        }
+      ]
     ]
   }
 }
