--- a/BookEchoApp/app.json
+++ b/BookEchoApp/app.json
@@ -20,7 +20,12 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "versionCode": 1
+      "versionCode": 1,
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ],
+      "package": "com.nataliavv1.BookEchoApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -36,6 +41,14 @@
           "recordAudioAndroid": true
         }
       ]
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "66136a52-b3fb-429b-87cb-dbcdc29fb021"
+      }
+    }
   }
 }
