--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -16,8 +16,8 @@
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.5",
     "@react-navigation/drawer": "^7.3.4",
-    "@react-navigation/native": "^7.1.1",
-    "@react-navigation/native-stack": "^7.3.8",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.2.5",
     "@supabase/supabase-js": "^2.49.4",
     "expo": "~52.0.42",
@@ -37,7 +37,9 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
