--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -39,7 +39,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "@ant-design/icons": "5.x"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
