--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@ant-design/icons": "5.x",
     "@expo-google-fonts/raleway": "^0.3.0",
     "@expo-google-fonts/urbanist": "^0.3.0",
     "@expo/metro-runtime": "~4.0.1",
@@ -33,14 +34,14 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.16.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "@ant-design/icons": "5.x"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
