--- a/BookEchoApp/package.json
+++ b/BookEchoApp/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native-stack": "^7.3.13",
     "@react-navigation/stack": "^7.2.5",
     "@supabase/supabase-js": "^2.49.4",
-    "expo": "~52.0.42",
+    "expo": "~52.0.46",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
     "expo-font": "~13.0.4",
@@ -30,7 +30,7 @@
     "expo-router": "~4.0.21",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.8",
+    "react-native": "^0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.16.1",
